adicionando a API mokada para testes

--- a/src/app/cursos/cursos/cursos.component.html
+++ b/src/app/cursos/cursos/cursos.component.html
@@ -5,7 +5,7 @@
       <span>Cursos Disponiveis</span>
     </mat-toolbar>
 
-    <table mat-table [dataSource]="cursoss" class="mat-elevation-z8">
+    <table mat-table [dataSource]="cursos" class="mat-elevation-z8">
 
       <!-- Coluna do ID -->
       <ng-container matColumnDef="_id">
