--- a/src/app/cursos/cursos/cursos.component.html
+++ b/src/app/cursos/cursos/cursos.component.html
@@ -1,34 +1,42 @@
 <mat-card>
   <mat-card-content>
 
-    <mat-toolbar color="primary" >
+    <mat-toolbar color="primary">
       <span>Cursos Disponiveis</span>
     </mat-toolbar>
 
-    <table mat-table [dataSource]="cursos" class="mat-elevation-z8">
+    <div *ngIf="cursos$ | async as cursos; else carregando">
+      <table mat-table [dataSource]="cursos" class="mat-elevation-z8">
 
-      <!-- Coluna do ID -->
-      <ng-container matColumnDef="_id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let cursoI"> {{cursoI._id}} </td>
-      </ng-container>
+        <!-- Coluna do ID -->
+        <ng-container matColumnDef="_id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let cursoI"> {{cursoI._id}} </td>
+        </ng-container>
 
-      <!-- Coluna do nome do curso-->
-      <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef> Curso </th>
-        <td mat-cell *matCellDef="let cursoN"> {{cursoN.nome}} </td>
-      </ng-container>
+        <!-- Coluna do nome do curso-->
+        <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Curso </th>
+          <td mat-cell *matCellDef="let cursoN"> {{cursoN.nome}} </td>
+        </ng-container>
 
-      <!-- Coluna da categoria -->
-      <ng-container matColumnDef="categoria">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let cursoC"> {{cursoC.categoria}} </td>
-      </ng-container>
+        <!-- Coluna da categoria -->
+        <ng-container matColumnDef="categoria">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let cursoC"> {{cursoC.categoria}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="mostraColunas"></tr>
-      <tr mat-row *matRowDef="let row; columns: mostraColunas;"></tr>
+        <tr mat-header-row *matHeaderRowDef="mostraColunas"></tr>
+        <tr mat-row *matRowDef="let row; columns: mostraColunas;"></tr>
 
-    </table>
+      </table>
+    </div>
+
+    <ng-template #carregando>
+    <div id="carregando-Spriner">
+        <mat-spinner></mat-spinner>
+    </div>
+    </ng-template>
 
   </mat-card-content>
 </mat-card>
