--- a/src/app/cursos/cursos/cursos.component.scss
+++ b/src/app/cursos/cursos/cursos.component.scss
@@ -1,3 +1,11 @@
 table {
   width: 100%;
 }
+
+#carregando-Spriner{
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0,0,0,0.10);
+}
